--- a/popup/popup.html
+++ b/popup/popup.html
@@ -17,6 +17,7 @@
       <p>请输入地址：</p>
        <input type="text" id="simpleTextInput" placeholder="请输入内容">
     </div>
+    <div></div>
   </div>
   <script src="../scripts/popup.js"></script>
 </body>
